# TRACER

./: .gitignore  CHANGELOG.md  README.md  analyze_all_coverage.sh  chatbot_connectors.py  discovered_functionalities.txt  example.yaml  merge_all_coverage.sh  merge_profile_coverage.sh  pyproject.toml  readme.md  requirements.txt  test.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
chatbot_explorer/: __init__.py  analyzer.py  cli.py  explorer.py  profiles.py  session.py
dev-scripts/: aggregate_tracer_coverage.sh  merge_profile_coverage.sh  tmux-mutant-testing.sh  update_goal_style.py
docs/: EXCEPTIONS.md
example_profiles/: asking_about_shop_hours.yaml  clarifying_an_ambiguous_response.yaml  confirmation_of_an_order.yaml  confirming_existing_order_details.yaml  custom_pizza_configuration.yaml  custom_pizza_creation.yaml  custom_pizza_order.yaml  drink_order_addition.yaml  group_order_request.yaml  inquiring_about_pickup_location.yaml  inquiry_about_menu_costs.yaml  location_and_pickup_inquiry.yaml  order_summary_and_confirmation.yaml  ordering_a_predefined_pizza.yaml  ordering_drinks_with_pizza.yaml  payment_and_pricing_inquiry.yaml  pizza_and_drink_order.yaml  placing_an_order_without_cheese.yaml  report.txt  selecting_drinks_for_an_order.yaml
example_profiles/ada-uam/: acceso_a_correo_institucional.yaml  acceso_a_recursos_de_biblioteca.yaml  acceso_a_servicios_bibliotecarios.yaml  acceso_al_catálogo_de_servicios_del_cau.yaml  acceso_al_correo_institucional.yaml  activar_una_nueva_cuenta_id-uam.yaml  almacenamiento_en_pc_virtual.yaml  asesoramiento_en_solicitudes_de_matrícula.yaml  asesoramiento_para_solicitar_direcciones_funcionales.yaml  atención_presencial.yaml  averiguar_los_horarios_de_atención_en_periodo_de_suspensión.yaml  buscar_identificador_id-uam_por_dni.yaml  configuración_y_recuperación_de_mfa.yaml  (+107 more)
example_profiles/ada-uam-2/: acceso_a_servicios_de_ti.yaml  consulta_de_horarios_de_atención_al_usuario.yaml  estudiante_universitario_consultando_horarios_de_atención.yaml  report.txt  solicitud_de_información_sobre_servicios.yaml  usuario_de_asistencia_técnica_en_una_empresa_de_software.yaml  usuario_de_servicio_al_cliente_en_línea.yaml  usuario_de_servicios_del_centro_de_atención_a_usuarios.yaml  usuario_de_soporte_técnico_de_software.yaml  usuario_del_catálogo_de_servicios_del_centro_de_atención_a_usuarios.yaml  usuario_del_departamento_de_recursos_humanos_solicitando_servicios_de_ti.yaml  usuario_en_busca_de_servicios_de_atención_al_cliente.yaml  usuario_en_busca_de_servicios_del_centro_de_atención_a_usuarios.yaml  usuario_en_busca_de_soporte_técnico.yaml  usuario_que_busca_servicios_específicos_de_asistencia.yaml
output/: report.txt
results/: copy_profiles.sh
scripts/: aggregate_profile_coverage.sh  aggregate_tracer_coverage.sh  aggregated_coverage.sh  analyze_profile_coverage.sh  merge_profile_coverage.sh  merge_tracer_coverage.sh  tmux-chatbot-testing.sh  update_goal_style.py
src/: chatbot_connectors.py  main.py  test.py  validation_script.py
tracer/: agent.py  constants.py  main.py
(+1275 files in other folders)
