[project]
requires-python = ">=3.11"

[tool.ruff]

# default is too small
line-length = 120
target-version = "py311"

[tool.ruff.lint]

# E: pycode style (error)
# W: pycode style (warning)
# F: Pyflakes
# I: ishort
# ANN: type annotations
# D: docstrings
# B: bugbear

select = [
    "ALL"
]

ignore = [
    "E501", # line too long
    # "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", # Common missing docstring rules
    "COM812", # Creates incompatibility with formatter
    "T201", # Doesnt let you use prints

]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]

quote-style = "double"
indent-style = "space"
