[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name= "TRACER"
version = "0.1.0"
description = "A tool to model chatbots and create profiles to test them."
authors = [
	{ name = "Iván Sotillo", email = "ivan.delhorno@uam.es" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "colorama>=0.4.6",
    "google-generativeai>=0.8.5",
    "graphviz>=0.20.3",
    "langchain-core>=0.3.60",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.3.17",
    "langgraph>=0.4.5",
]

[project.scripts]
TRACER = "main:main"


[tool.setuptools]

package-dir = {"" = "src"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]

# default is too small
line-length = 120
target-version = "py311"

[tool.ruff.lint]

# E: pycode style (error)
# W: pycode style (warning)
# F: Pyflakes
# I: ishort
# ANN: type annotations
# D: docstrings
# B: bugbear

select = [
    "ALL"
]

ignore = [
    "E501", # line too long
    # "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", # Common missing docstring rules
    "COM812", # Creates incompatibility with formatter
    "T201", # Doesnt let you use prints

]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]

quote-style = "double"
indent-style = "space"
